fix text alignment tool tip

--- a/frontend/src/blocks/tooltip.css
+++ b/frontend/src/blocks/tooltip.css
@@ -17,4 +17,5 @@
   font-weight: 900;
   margin: 0;
   line-height: 1.2;
+  text-align:center;
 }
